# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#############################################
# Privacy Manager Service Build Config
# This file contains all configurations for privacy_manager
# Including sources, includes, deps, and external_deps with conditional logic
#############################################

import("//base/security/access_token/access_token.gni")

#############################################
# Complete configuration with all conditional logic
#############################################
privacy_manager_base_config = {
  # ========== Sources ==========
  # Base sources (always included)
  sources = [
    "${access_token_path}/services/privacymanager/src/active/active_status_callback_manager.cpp",
    "${access_token_path}/services/privacymanager/src/active/perm_active_status_callback_death_recipient.cpp",
    "${access_token_path}/services/privacymanager/src/active/perm_active_status_change_callback_proxy.cpp",
    "${access_token_path}/services/privacymanager/src/active/state_change_callback_proxy.cpp",
    "${access_token_path}/services/privacymanager/src/common/access_token_helper.cpp",
    "${access_token_path}/services/privacymanager/src/common/constant.cpp",
    "${access_token_path}/services/privacymanager/src/database/data_translator.cpp",
    "${access_token_path}/services/privacymanager/src/database/permission_used_record_db.cpp",
    "${access_token_path}/services/privacymanager/src/database/privacy_field_const.cpp",
    "${access_token_path}/services/privacymanager/src/disable_policy/disable_policy_cbk_manager.cpp",
    "${access_token_path}/services/privacymanager/src/disable_policy/perm_disable_policy_cbk_death_recipient.cpp",
    "${access_token_path}/services/privacymanager/src/disable_policy/perm_disable_policy_cbk_proxy.cpp",
    "${access_token_path}/services/privacymanager/src/proxy/privacy_manager_proxy_death_param.cpp",
    "${access_token_path}/services/privacymanager/src/record/on_permission_used_record_callback_proxy.cpp",
    "${access_token_path}/services/privacymanager/src/record/permission_record.cpp",
    "${access_token_path}/services/privacymanager/src/record/permission_record_manager.cpp",
    "${access_token_path}/services/privacymanager/src/record/permission_record_set.cpp",
    "${access_token_path}/services/privacymanager/src/sensitive/audio_manager/audio_manager_adapter.cpp",
    "${access_token_path}/services/privacymanager/src/sensitive/camera_manager/camera_manager_adapter.cpp",
    "${access_token_path}/services/privacymanager/src/service/privacy_manager_service.cpp",
  ]

  # Conditional sources based on feature flags
  if (common_event_service_enable) {
    sources += [ "${access_token_path}/services/privacymanager/src/common/privacy_common_event_subscriber.cpp" ]
  }

  # ========== Include Dirs ==========
  # Base include dirs (always included)
  include_dirs = [
    "${access_token_path}/services/privacymanager/include/active",
    "${access_token_path}/services/privacymanager/include/common",
    "${access_token_path}/services/privacymanager/include/database",
    "${access_token_path}/services/privacymanager/include/disable_policy",
    "${access_token_path}/services/privacymanager/include/proxy",
    "${access_token_path}/services/privacymanager/include/record",
    "${access_token_path}/services/privacymanager/include/service",
    "${access_token_path}/services/privacymanager/include/sensitive",
    "${access_token_path}/services/privacymanager/include/sensitive/audio_manager",
    "${access_token_path}/services/privacymanager/include/sensitive/camera_manager",
    "${access_token_path}/frameworks/privacy/include",
    "${access_token_path}/frameworks/common/include",
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/privacy/include",
    "${access_token_path}/interfaces/innerkits/privacy/src",
    "${access_token_path}/services/common/app_manager/include",
    "${access_token_path}/services/common/json_parse/include",
    "${access_token_path}/services/common/database/include",
    "${access_token_path}/services/common/dfx/include",
    "${access_token_path}/services/common/handler/include",
    "${access_token_path}/services/common/libraryloader/include",
    "${access_token_path}/services/common/screenlock_manager/include",
    "${access_token_path}/services/common/utils/include",
    "${access_token_path}/services/accesstokenmanager/main/cpp/include/permission",
    "${access_token_path}/interfaces/innerkits/proxy_death/include",
    "${access_token_path}/services/common/proxy_death/include",
  ]

  # Conditional include dirs based on feature flags
  if (!access_token_app_security_privacy_service_enable) {
    include_dirs +=
        [ "${access_token_path}/services/common/ability_manager/include" ]
  }

  # ========== Deps ==========
  # Base deps (always included)
  deps = [
    "${access_token_path}/frameworks/common:accesstoken_common_cxx",
    "${access_token_path}/frameworks/privacy:privacy_communication_adapter_cxx",
    "${access_token_path}/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "${access_token_path}/services/common:accesstoken_service_common",
    "${access_token_path}/services/common/proxy_death:proxy_death_handler",
    "${access_token_path}/services/privacymanager:privacy.rc",
    "${access_token_path}/services/privacymanager:privacy_manager_stub",
  ]

  # ========== External Deps ==========
  # Base external deps (always included)
  external_deps = [
    "ability_base:want",
    "c_utils:utils",
    "hilog:libhilog",
    "hisysevent:libhisysevent",
    "init:libbegetutil",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "sqlite:sqlite",
  ]

  # Add global external_deps from access_token.gni
  external_deps += access_token_external_deps

  # Conditional external deps based on feature flags
  if (ohos_indep_compiler_enable) {
    external_deps += [ "bounds_checking_function:libsec_shared" ]
  }

  # ========== Cflags ==========
  cflags_cc = access_token_cflags_cc + [ "-fvisibility=hidden" ]

  # ========== Configs ==========
  # Build configs
  configs = [
    "${access_token_path}/config:access_token_compile_flags",
    "${access_token_path}/config:coverage_flags",
    "${access_token_path}/services/privacymanager:privacy_manager_gen_config",
  ]
}
