# Copyright (c) 2026 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

#############################################
# Token Sync Manager Service Build Config
# This file contains all configurations for tokensync_manager
# Including sources, includes, deps, and external_deps with conditional logic
#############################################

import("//base/security/access_token/access_token.gni")

#############################################
# Complete configuration with all conditional logic
#############################################
tokensync_manager_base_config = {
  # ========== Sources ==========
  # All sources (token_sync is always enabled when built)
  sources = [
    "${access_token_path}/services/tokensyncmanager/src/command/base_remote_command.cpp",
    "${access_token_path}/services/tokensyncmanager/src/command/delete_remote_token_command.cpp",
    "${access_token_path}/services/tokensyncmanager/src/command/sync_remote_hap_token_command.cpp",
    "${access_token_path}/services/tokensyncmanager/src/command/update_remote_hap_token_command.cpp",
    "${access_token_path}/services/tokensyncmanager/src/common/constant.cpp",
    "${access_token_path}/services/tokensyncmanager/src/device/device_info_manager.cpp",
    "${access_token_path}/services/tokensyncmanager/src/device/device_info_repository.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/remote_command_executor.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/remote_command_factory.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/remote_command_manager.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/soft_bus_channel.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/soft_bus_device_connection_listener.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/soft_bus_manager.cpp",
    "${access_token_path}/services/tokensyncmanager/src/remote/soft_bus_socket_listener.cpp",
    "${access_token_path}/services/tokensyncmanager/src/service/token_sync_manager_service.cpp",
    "${access_token_path}/services/tokensyncmanager/src/service/token_sync_manager_stub.cpp",
  ]

  # ========== Include Dirs ==========
  # All include dirs
  include_dirs = [
    "${access_token_path}/frameworks/common/include",
    "${access_token_path}/frameworks/accesstoken/include",
    "${access_token_path}/frameworks/tokensync/include",
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/tokensync/include",
    "${access_token_path}/services/accesstokenmanager/main/cpp/include/permission",
    "${access_token_path}/frameworks/json_adapter/include",
    "${access_token_path}/services/common/json_parse/include",
    "${access_token_path}/services/common/handler/include",
    "${access_token_path}/services/common/libraryloader/include",
    "${access_token_path}/services/common/random/include",
    "${access_token_path}/services/tokensyncmanager/include/command",
    "${access_token_path}/services/tokensyncmanager/include/common",
    "${access_token_path}/services/tokensyncmanager/include/device",
    "${access_token_path}/services/tokensyncmanager/include/protocol",
    "${access_token_path}/services/tokensyncmanager/include/remote",
    "${access_token_path}/services/tokensyncmanager/include/service",
  ]

  # ========== Deps ==========
  # All deps
  deps = [
    "${access_token_path}/frameworks/accesstoken:accesstoken_communication_adapter_cxx",
    "${access_token_path}/frameworks/common:accesstoken_common_cxx",
    "${access_token_path}/frameworks/json_adapter:accesstoken_cjson_utils",
    "${access_token_path}/interfaces/innerkits/accesstoken:libaccesstoken_sdk",
    "${access_token_path}/interfaces/innerkits/token_setproc:libtoken_setproc",
    "${access_token_path}/services/common:accesstoken_service_common",
    "${access_token_path}/services/tokensyncmanager:token_sync.rc",
  ]

  # ========== External Deps ==========
  # All external deps
  external_deps = [
    "cJSON:cjson",
    "c_utils:utils",
    "dsoftbus:softbus_client",
    "hilog:libhilog",
    "ipc:ipc_single",
    "safwk:system_ability_fwk",
    "samgr:samgr_proxy",
    "zlib:shared_libz",
  ]

  external_deps += access_token_external_deps

  if (ohos_indep_compiler_enable) {
    external_deps += [ "bounds_checking_function:libsec_shared" ]
  }

  # ========== Cflags ==========
  cflags_cc = access_token_cflags_cc

  # ========== Configs ==========
  # Build configs
  configs = [
    "${access_token_path}/config:access_token_compile_flags",
    "${access_token_path}/config:coverage_flags",
  ]
}
