# Copyright (c) 2022 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//base/security/access_token/access_token.gni")
import("//build/test.gni")

config("accesstoken_test_config") {
  include_dirs = [
    "//base/security/access_token/frameworks/accesstoken/include",
    "//base/security/access_token/frameworks/common/include",
    "//base/security/access_token/frameworks/privacy/include",
    "//base/security/access_token/interfaces/innerkits/accesstoken/include",
    "//base/security/access_token/interfaces/innerkits/privacy/include",
    "//commonlibrary/c_utils/base/include",
    "//third_party/googletest/include",
    "//third_party/mbedtls/include",
  ]
}

ohos_unittest("libaccesstoken_framework_test") {
  subsystem_name = "security"
  part_name = "access_token"
  module_out_path = part_name + "/" + part_name

  sources = [
    "accesstoken_parcel_test.cpp",
    "common_test.cpp",
    "privacy_parcel_test.cpp",
  ]

  configs = [
    ":accesstoken_test_config",
    "//base/security/access_token/config:coverage_flags",
  ]

  deps = [
    "//base/security/access_token/frameworks/accesstoken:accesstoken_communication_adapter_cxx",
    "//base/security/access_token/frameworks/common:accesstoken_common_cxx",
    "//base/security/access_token/frameworks/privacy:privacy_communication_adapter_cxx",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":libaccesstoken_framework_test" ]
}
