# Copyright (c) 2022-2023 Huawei Device Co., Ltd.
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

import("//build/test.gni")
import("../../../access_token.gni")

config("accesstoken_test_config") {
  include_dirs = [
    "${access_token_path}/interfaces/innerkits/accesstoken/include",
    "${access_token_path}/interfaces/innerkits/privacy/include",
    "../../accesstoken/include",
    "../../common/include",
    "../../privacy/include",
  ]
}

ohos_unittest("libaccesstoken_framework_test") {
  subsystem_name = "security"
  part_name = "access_token"
  module_out_path = part_name + "/" + part_name
  sanitize = {
    cfi = true
    cfi_cross_dso = true
    debug = false
  }
  branch_protector_ret = "pac_ret"

  sources = [
    "accesstoken_parcel_test.cpp",
    "common_test.cpp",
    "privacy_parcel_test.cpp",
  ]

  configs = [
    ":accesstoken_test_config",
    "${access_token_path}/config:coverage_flags",
  ]

  deps = [
    "../../accesstoken:accesstoken_communication_adapter_cxx",
    "../../common:accesstoken_common_cxx",
    "../../privacy:privacy_communication_adapter_cxx",
  ]

  external_deps = [
    "c_utils:utils",
    "ipc:ipc_single",
    "json:nlohmann_json_static",
    "openssl:libcrypto_shared",
  ]
}

group("unittest") {
  testonly = true
  deps = [ ":libaccesstoken_framework_test" ]
}
